z-index fix

--- a/src/app/home/home-view/home.component.css
+++ b/src/app/home/home-view/home.component.css
@@ -44,6 +44,7 @@
     flex-direction: column;
     background-color: rgb(255, 255, 255);
     width: 80vh;
+    z-index: 10;
 }
 .filter-options-box.ng-star-inserted {
     display: flex;
